@@ -22,7 +22,7 @@
 # acl_file
 # allow_anonymous - use listener_allow_anonymous instead
 # allow_zero_length_clientid
-# auto_id_prefix
+# auto_id_prefix - use listener_auto_id_prefix instead
 # password_file
 # plugin - use plugin_load and plugin_use instead
 # plugin_opt_*
@@ -324,6 +324,12 @@
 # listener_allow_anonymous is set at the same time as allow_anonymous, the
 # value set by listener_allow_anonymous will always take priority.
 #listener_allow_anonymous
+
+# This option allows you to set a prefix to automatically generated client ids
+# (i.e. for when a client connects without providing a client id) to aid
+# visibility in logs.
+# Defaults to 'auto-'
+#listener_auto_id_prefix auto-
 
 # Set use_username_as_clientid to true to replace the clientid that a client
 # connected with with its username. This allows authentication to be tied to
