@@ -9,6 +9,7 @@ tests = [
     (1, './01-connect-575314.py'),
     (1, './01-connect-accept-protocol.py'),
     (1, './01-connect-allow-anonymous.py'),
+    (2, './01-connect-auto-id.py'),
     (1, './01-connect-disconnect-v5.py'),
     (1, './01-connect-global-max-clients.py'),
     (1, './01-connect-global-max-connections.py'),
